@@ -1,3 +1,8 @@
+2002-08-12  Keith Seitz  <keiths@redhat.com>
+
+	* interps.c: Run through gdb_indent.sh
+	* interps.h: Ditto.
+
 2002-08-08  Keith Seitz  <keiths@redhat.com>
 
 	* infrun.c (handle_inferior_event): Add context_changed_event.
